devops/k8s/sample/deployment.yml
# kubectl -n tenancy-one get deploy -o wide
# kubectl -n tenancy-one create configmap api-configmap --from-env-file=../../.env_k8s
# kubectl create configmap api-configmap --from-env-file=../../.env_k8s

apiVersion: apps/v1 
kind: Deployment
metadata:
  name: sample-api
  namespace: tenancy-one
spec:
  selector:
    matchLabels:
      app: sample-api
  replicas: 3
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      containers:
      - name: sample-api
        image: pisanix/sample-api:latest
        ports:
        - containerPort: 80
